feat: setup Phase 1 project structure with services and shared modules
- Create base package structure with __init__.py files
- Setup events_gateway service with routers, producers, simulators
- Create shared modules for kafka and schemas
- Organize microservices architecture foundation

--- a/majorproject/requirements.txt
+++ b/majorproject/requirements.txt
@@ -1,3 +1,11 @@
-fastapi
 pandas 
 numpy 
+fastapi
+uvicorn[standard]
+pydantic
+pydantic-settings
+python-dotenv
+confluent-kafka 
+faker
+click  
+pyyaml
