fix: resolve Kafka race condition on startup
- Add restart: on-failure:3 policy to all Kafka brokers
- Implement proper health check waiting in start_all.sh
- Create dedicated wait_for_services.sh script
- Wait for Zookeeper to be fully healthy before Kafka
- Add 90s timeout for Kafka broker health checks
- Provide better error messages for startup failures

This fixes the race condition where Kafka brokers would
fail on first startup when Zookeeper wasn't fully ready.

--- a/majorproject/docker-compose.yml
+++ b/majorproject/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     image: confluentinc/cp-kafka:7.5.0
     container_name: flowguard-kafka-1
     hostname: kafka-broker-1
+    restart: on-failure:3
     depends_on:
       zookeeper:
         condition: service_healthy
@@ -96,6 +97,7 @@ services:
     image: confluentinc/cp-kafka:7.5.0
     container_name: flowguard-kafka-2
     hostname: kafka-broker-2
+    restart: on-failure:3
     depends_on:
       zookeeper:
         condition: service_healthy
@@ -145,6 +147,7 @@ services:
     image: confluentinc/cp-kafka:7.5.0
     container_name: flowguard-kafka-3
     hostname: kafka-broker-3
+    restart: on-failure:3
     depends_on:
       zookeeper:
         condition: service_healthy
